feat: implementacion estructura principal de la aplicación con filtros e integración de vista principal

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -7,5 +7,96 @@ appTitle=Monitor Factura Prueba
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
+
 #XTIT: Main view title
 title=Monitor Factura
+
+#XTIT: Filtros view title
+filtrosTitle=Filtros de Búsqueda
+
+#XTIT: Criterios de búsqueda
+filtrosCriterios=Criterios de Búsqueda
+
+#XLBL: Sociedad
+sociedad=Sociedad
+
+#XLBL: División
+division=División
+
+#XLBL: División A
+divisionA=a
+
+#XLBL: Proveedor
+proveedor=Proveedor
+
+#XLBL: Proveedor A
+proveedorA=a
+
+#XLBL: Fecha de Registro
+fechaRegistro=Fecha de Registro
+
+#XLBL: Fecha de Registro A
+fechaRegistroA=a
+
+#XLBL: Fecha de Emisión
+fechaEmision=Fecha de Emisión
+
+#XLBL: Fecha de Emisión A
+fechaEmisionA=a
+
+#XLBL: Fecha de Vencimiento
+fechaVencimiento=Fecha de Vencimiento
+
+#XLBL: Fecha de Vencimiento A
+fechaVencimientoA=a
+
+#XLBL: Tipo de Documento
+tipoDocumento=Tipo de Documento
+
+#XLBL: Factura de Suministro
+facturaSuministro=Factura de Suministro
+
+#XLBL: Factura de Servicios
+facturaServicios=Factura de Servicios
+
+#XLBL: Sin Referencia
+sinReferencia=Factura sin Referencia
+
+#XLBL: Nota de Crédito
+notaCredito=Nota de Crédito
+
+#XBUT: Buscar
+buscar=Buscar
+
+#XFLD: Placeholder - Seleccione Sociedad
+seleccioneSociedad=1000
+
+#XFLD: Placeholder - Seleccione División
+seleccioneDivision=Seleccione una división...
+
+#XFLD: Placeholder - División Desde
+divisionDesde=Desde
+
+#XFLD: Placeholder - División Hasta
+divisionHasta=Hasta
+
+#XFLD: Placeholder - Ingrese Proveedor
+ingreseProveedor=Ingrese código de proveedor...
+
+#XFLD: Placeholder - Proveedor Desde
+proveedorDesde=Desde
+
+#XFLD: Placeholder - Proveedor Hasta
+proveedorHasta=Hasta
+
+#XFLD: Placeholder - Fecha Desde
+fechaDesde=Desde
+
+#XFLD: Placeholder - Fecha Hasta
+fechaHasta=Hasta
+
+#XLBL: Estado
+estado=Estado
+
+#XFLD: Placeholder - Seleccione Estado
+seleccioneEstado=Seleccione estado...
