feat: refactorizacion integracion la vista Filtros en MainView y actualizar rutas en manifest.json

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -24,7 +24,7 @@ notaCredito=Nota de Crédito
 buscar=Buscar
 
 #Vista de resultados
-seleccioneSociedad=1000 
+seleccioneSociedad= 
 seleccioneDivision=Seleccione una división... 
 divisionDesde=Desde 
 divisionHasta=Hasta 
